# backend

./: .gitignore  README.md  pandoc.sh  pyproject.toml
app/api/routers/: chat.py
app/utils/: index.py  json_model.py  tru_query_engine_recorder.py
docs/: gemini_multi_modal.ipynb  llama_index_quickstart.ipynb
storage/: default__vector_store.json  docstore.json  index_store.json
